News for pip
============

tip
---

* Add ``pip uninstall`` and uninstall-before upgrade (from Carl
  Meyer).

* Extended configurability with config files and environment variables.

* Allow packages to be upgraded, e.g., ``pip install Package==0.1``
  then ``pip install Package==0.2``.

* Allow installing/upgrading to Package==dev (fix "Source version does not
  match target version" errors).

* Extended integration with virtualenv by providing an option to
  automatically use an active virtualenv and an option to warn if no active
  virtualenv is found.

* Fixed a bug with pip install --download and editable packages, where
  directories were being set with 0000 permissions, now defaults to 755.

* Fixed uninstallation of easy_installed console_scripts.

* Fixed uninstallation on Mac OS X Framework layout installs

* Fixed bug preventing uninstall of editables with source outside venv.

* Creates download cache directory if not existing.

0.5.1
-----

* Fixed a couple little bugs, with git and with extensions.

0.5
---

* Added ability to override the default log file name (``pip-log.txt``)
  with the environmental variable ``$PIP_LOG_FILE``.

* Made the freeze command print installed packages to stdout instead of
  writing them to a file. Use simple redirection (e.g.
  ``pip freeze > stable-req.txt``) to get a file with requirements.

* Fixed problem with freezing editable packages from a Git repository.

* Added support for base URLs using ``<base href='...'>`` when parsing
  HTML pages.

* Fixed installing of non-editable packages from version control systems.

* Fixed issue with Bazaar's bzr+ssh scheme.

* Added --download-dir option to the install command to retrieve package
  archives. If given an editable package it will create an archive of it.

* Added ability to pass local file and directory paths to ``--find-links``,
  e.g. ``--find-links=file:///path/to/my/private/archive``

* Reduced the amount of console log messages when fetching a page to find a